# fake-news-reporter-demo

./: Dockerfile  GEMINI.md  README.md  docker-compose.dtrack.yml  docker-compose.yml  pom.xml
.github/: CI_CD_GUIDE.md
.github/workflows/: build-push.yml  ci.yml
ai_agent/: README_AI_AGENT.md  TestAgain.py
demo - mainmain - Copy - Copy (12) - Copy/: docker-compose.yml  pom.xml
demo - mainmain - Copy - Copy (12) - Copy/src/main/resources/: application.properties
fake-news-reporter-demo-main/: .gitignore  CLAUDE.md  README.md  docker-compose.yml
fake-news-reporter-demo-main/.github/: dependabot.yml.disabled
fake-news-reporter-demo-main/docs/: arc42-template-EN.md  architecture.md
fake-news-reporter-demo-main/src/main/resources/: application.yml
fake-news-reporter-demo-main/src/main/resources/templates/: index.html  login.html  report-form.html  reports.html
local_ai_agent/: LocalAIAgent.py
smol_fetch_news_and_classify_app/: README_smolagents_mcp_news_app.md  main.py  mcp_client.py  news_mcp_server.py  pyproject.toml  run_agent_cli.py  smol_mcp_tools.py  smolagents_app.py  tools.py
smol_fetch_news_and_classify_app/workspace/news/: ars_news.json  bbc_news.json  single_article.json
src/main/resources/: application-local.yml  application-prod.yml  application-test.yml  application.yml
src/main/resources/static/css/: style.css
src/main/resources/templates/: fact-check-history.html  fact-check.html  index.html  login.html  register.html  report-details.html  report-form.html  reports.html
src/main/resources/templates/admin/: dashboard.html  (+1 more)
(+47 files in other folders)
