[project]
name = "smol-fetch-news-and-classify-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "litellm>=1.87.0",
    "mcp>=1.27.2",
    "mcpadapt>=0.1.19",
    "smolagents[mcp]>=1.26.0",
    "trafilatura>=2.0.0",
]
